--- a/cstyles.css
+++ b/cstyles.css
@@ -110,7 +110,7 @@
 }
 .remarks{
     text-align: center;
-    font-family: "Jua", cursive;
+    font-family: "Sour Gummy", sans-serif;
     font-weight: bold;
     font-size: 45px;
 }
