--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,10 @@
     color: rgb(233, 43, 75);
 }
 .greeting p{
-    margin-top: 50px;
+    margin-top: 100px;
     text-align: center;
     font-family: "Architects Daughter", cursive;
-    font-size: 85px;
+    font-size: 100px;
 }
 .greeting p span{
     color: rgb(248, 105, 105);
@@ -95,10 +95,142 @@
 }
 .footer{
     background-color: rgb(247, 154, 169);
-    margin-top: 80px;
+    margin-top: 300px;
 }
 .footer p {
     text-align: center;
     padding: 40px 40px;
     font-family: Arial;
+}
+
+@media(min-width: 320px) and (max-width: 320px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.logo img{
+    height: 100px;
+}
+.title{
+    margin-left: 130px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 17px;
+}
+.navbar{
+    margin-top: -30px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.greeting p{
+    margin-top: 50px;
+    text-align: center;
+    font-family: "Architects Daughter", cursive;
+    font-size: 75px;
+}
+.qoute p i{
+    font-size: 15px;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
+
+@media(min-width: 321px) and (max-width: 425px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.logo img{
+    height: 100px;
+}
+.title{
+    margin-left: 130px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 20px;
+}
+.navbar{
+    margin-top: -50px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.greeting p{
+    margin-top: 50px;
+    text-align: center;
+    font-family: "Architects Daughter", cursive;
+    font-size: 75px;
+}
+.qoute p i{
+    font-size: 15px;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
 }
