--- a/astyles.css
+++ b/astyles.css
@@ -130,3 +130,137 @@
     font-family: Arial;
     font-weight: bold;
 }
+
+@media(min-width: 320px) and (max-width: 320px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.logo img{
+    height: 100px;
+}
+.title{
+    margin-left: 130px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 17px;
+}
+.navbar{
+    margin-top: -30px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.statement{
+    margin-top: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.statement p{
+    font-family: "Open Sans", sans-serif;
+    text-align: justify;
+    font-size: 16px;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
+
+@media(min-width: 321px) and (max-width: 425px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.logo img{
+    height: 100px;
+}
+.title{
+    margin-left: 130px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 20px;
+}
+.navbar{
+    margin-top: -50px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.statement{
+    margin-top: 18px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.statement p{
+    font-family: "Open Sans", sans-serif;
+    text-align: justify;
+    font-size: 18px;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
