--- a/pstyles.css
+++ b/pstyles.css
@@ -103,3 +103,246 @@
     font-weight: bold;
     font-family: Arial;
 }
+
+@media(min-width: 320px) and (max-width: 320px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.header .logo img{
+    height: 100px;
+}
+.title h1{ 
+    margin-left: -20px;
+    font-size: 34px;
+}
+.wrapper .navbar{
+    margin-top: -31px;
+    background-color: rgb(247, 154, 169);
+}
+.wrapper .navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.products_items{
+    margin-bottom: -80px;
+}
+.products_items:hover {
+    background-color: rgb(255, 46, 81);
+    border-radius: 50px;
+    transition: 0.7s ease;      
+    transform: scale(1.6); 
+}
+.products_items img{
+    height: 200px;
+}   
+.products_items:hover img{
+    margin-top: -30px;
+    transition: 0.7s ease;
+    transform: scale(0.6 );
+}
+.products_items:hover #song_title{
+    margin-top: -40px;
+    transition: 0.7s ease;
+}
+.products_items div p{
+    margin-top: 20px;
+    text-align: center;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
+
+@media(min-width: 321px) and (max-width: 525px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.wrapper .logo img{
+    height: 100px;
+}
+.wrapper .title{
+    margin-left: 130px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 20px;
+}
+.wrapper .navbar{
+    margin-top: -30px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 10px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.products_items{
+    margin-bottom: -80px;
+}
+.products_items:hover {
+    background-color: rgb(255, 46, 81);
+    border-radius: 50px;
+    transition: 0.7s ease;      
+    transform: scale(1.6); 
+}
+.products_items img{
+    height: 200px;
+}   
+.products_items:hover img{
+    margin-top: -30px;
+    transition: 0.7s ease;
+    transform: scale(0.6 );
+}
+.products_items:hover #song_title{
+    margin-top: -40px;
+    transition: 0.7s ease;
+}
+.products_items div p{
+    margin-top: 20px;
+    text-align: center;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
+
+@media (min-width: 526px) and (max-width: 900px){
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+*{
+    padding: 0%;
+    margin: 0%;
+}
+.wrapper{
+    background: url(images/bg.png);
+}
+.logo{
+    padding: 10px 10px;
+    margin-top: -5px;
+}
+.logo img{
+    height: 130px;
+}
+.title{
+    margin-left: 150px;
+    margin-top: -115px;
+    font-family: "Leckerli One", cursive;
+    font-size: 23px;
+}
+.navbar{
+    margin-top: -20px;
+    background-color: rgb(247, 154, 169);
+}
+.navbar ul{
+    display: flex;
+    gap: 20px;
+    justify-content: right;
+    margin-top: 70px;
+    margin-right: 30px;
+}
+.navbar ul li{
+    list-style: none;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+    font-weight: bold;
+    transition: 0.4s;
+}
+.navbar ul li a.products{
+    text-decoration: underline;
+    color: rgb(233, 43, 75);
+}
+.navbar ul li a:hover{
+    text-decoration: underline;
+    color: rgb(233, 43, 75);
+}
+.products_items img{
+    height: 200px;
+}   
+.products_items:hover img{
+    margin-top: -30px;
+    transition: 0.7s ease;
+    transform: scale(0.6 );
+}
+.products_items:hover #song_title{
+    margin-top: -40px;
+    transition: 0.7s ease;
+}
+.products_items div p{
+    margin-top: 20px;
+    text-align: center;
+}
+.footer p {
+    text-align: center;
+    padding: 40px 40px;
+    font-family: Arial;
+    font-size: 13px;
+}
+}
