--- a/astyles.css
+++ b/astyles.css
@@ -111,6 +111,12 @@
     color: rgb(255, 24, 62);
     transition: 0.4s ease;
 }
+.location{
+    margin-top: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .qoute{
     margin-top: 100px;
 }
@@ -131,7 +137,7 @@
     font-weight: bold;
 }
 
-@media(min-width: 320px) and (max-width: 320px){
+@media(min-width: 320px) and (max-width: 374px){
 @import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@@ -190,6 +196,10 @@
     text-align: justify;
     font-size: 16px;
 }
+iframe{
+    width: 300px;
+    height: 200px;
+}
 .footer p {
     text-align: center;
     padding: 40px 40px;
@@ -198,7 +208,7 @@
 }
 }
 
-@media(min-width: 321px) and (max-width: 425px){
+@media(min-width: 375px) and (max-width: 629px){
 @import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@@ -256,6 +266,10 @@
     font-family: "Open Sans", sans-serif;
     text-align: justify;
     font-size: 18px;
+}
+iframe{
+    width: 350px;
+    height: 270px;
 }
 .footer p {
     text-align: center;
